@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.swagger.parser.v3</groupId>
     <artifactId>swagger-parser-project</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>swagger-parser-project</name>
     <developers>
@@ -52,6 +52,7 @@
                 <version>${surefire-version}</version>
                 <configuration>
                     <testNGArtifactName>none:none</testNGArtifactName>
+                    <argLine>-Djdk.attach.allowAttachSelf</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -110,7 +111,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>3.0.0</version>
                 <configuration>
                     <aggregate>true</aggregate>
                     <source>1.8</source>
@@ -147,7 +148,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.5.201505241946</version>
+                <version>0.8.1</version>
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
@@ -249,17 +250,17 @@
         </repository>
     </repositories>
     <properties>
-        <swagger-parser-v2-version>1.0.35-SNAPSHOT</swagger-parser-v2-version>
+        <swagger-parser-v2-version>1.0.35</swagger-parser-v2-version>
         <commons-io-version>2.4</commons-io-version>
         <slf4j-version>1.6.3</slf4j-version>
-        <swagger-core-version>2.0.0-SNAPSHOT</swagger-core-version>
+        <swagger-core-version>2.0.1</swagger-core-version>
         <junit-version>4.8.1</junit-version>
-        <testng-version>6.9.6</testng-version>
-        <jmockit-version>1.19</jmockit-version>
-        <wiremock-version>2.4.1</wiremock-version>
-        <surefire-version>2.18.1</surefire-version>
+        <testng-version>6.14.2</testng-version>
+        <jmockit-version>1.35</jmockit-version>
+        <wiremock-version>2.15.0</wiremock-version>
+        <surefire-version>2.21.0</surefire-version>
         <commons-lang-version>3.2.1</commons-lang-version>
-        <jackson-version>2.9.1</jackson-version>
+        <jackson-version>2.9.5</jackson-version>
     </properties>
     
 </project>
